vlib/v/checker/tests/return_missing_simple.out
vlib/v/checker/tests/return_missing_simple.vv:4:5: warning: condition is always true
    2 | 
    3 | fn foo() string {
    4 |     if true {
      |        ~~~~
    5 |         return ''
    6 |     } else {
vlib/v/checker/tests/return_missing_simple.vv:3:1: error: missing return at end of function `foo`
    1 | fn main() {}
    2 | 
    3 | fn foo() string {
      | ~~~~~~~~~~~~~~~
    4 |     if true {
    5 |         return ''
